Intent implicto creado

--- a/app/src/main/res/layout/activity_intent_implicito.xml
+++ b/app/src/main/res/layout/activity_intent_implicito.xml
@@ -30,4 +30,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewComida"
         app:layout_constraintVertical_bias="0.075" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="97dp"
+        android:layout_height="91dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/ic_app_foreground" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
